# adaptive-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  PROJECT_PLAN.md  README.md  app.py  docker-compose.yml  opencode.json  pyproject.toml  requirements.txt
docs/: check_postgres.md  check_qdrant.md  phase_6_result.md
qwen_test/: test_qwen.py  test_qwen_result.txt
scripts/: init_qdrant.py  preload_models.py  seed_demo_data.py
src/: __init__.py
src/cache/: __init__.py  embedding_cache.py  ocr_cache.py
src/chunking/: __init__.py  markdown_chunker.py  metadata.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  converter.py  docling_parser.py  file_detector.py  parser_router.py  qwen_parser.py
src/eval/: __init__.py  golden.jsonl  run_deepeval.py  run_ragas.py  run_routing_eval.py
src/indexing/: __init__.py  embeddings.py  pipeline.py  qdrant_store.py
src/observability/: __init__.py  cost_tracker.py  langfuse_client.py
src/retrieval/: __init__.py  hybrid_search.py  reranker.py
src/routing/: __init__.py  adaptive_router.py  dispatcher.py  prompts.py  strategies.py
src/synthesis/: __init__.py  response.py
src/tools/: __init__.py  sql_tool.py
src/ui/: __init__.py  admin_ui.py  chat_ui.py  ingest_ui.py  main_ui.py  markdown_converter_ui.py
src/utils/: __init__.py  pdf_inspector.py
tests/: README.md  test_embedding_cache.py  test_file_detector.py  test_metadata.py  test_ocr_cache.py  test_prompts.py  test_settings.py  test_sql_tool.py  test_strategies.py
