[project]
name = "adaptiverag"
version = "0.1.0"
description = "Intelligent Data Platform: Hybrid Adaptive RAG + MCP Architecture"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.92.0",
    "fastembed>=0.4.2",
    "gradio>=6.13.0",
    "langchain>=1.2.16",
    "langchain-core>=1.3.2",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.33.0",
    "pillow>=10.4.0",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.12.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
